--- a/Day 3-4/Assignment 3/index3.html
+++ b/Day 3-4/Assignment 3/index3.html
@@ -13,6 +13,7 @@
                 hobbies:["reading","coding","painting","Listening music"]
             }
             console.log(arrays); //printing on console screen
+            document.write("View the output on the console");
             
         </script>
     </body>
